<resources>
    <!-- Strings related to the app in general-->
    <string name="app_name">Coinz</string>
    <string name="action_settings">Settings</string>
    <string name="access_key">pk.eyJ1IjoiYWJha2hhaSIsImEiOiJjam4weDlxdGsxcDl3M2txbG4xNXY2NWV2In0.7tbxsNyPrP4OoZcLKwcSfg</string>


    <!-- Strings related to MainActivity, the map -->
    <string name="marker_snippet">I am a coin, of value %1$s</string>
    <string name="maker_title">%1$s</string>
    <string name="nav_map">Map</string>

    <!-- Strings related to WalletActivity -->
    <string name="nav_wallet">Wallet</string>
    <string name="remaining">You have %1$d bank transfer remaining today</string>

    <!-- Strings related to BankActivity -->
    <string name="nav_bank">Bank</string>
    <string name="bank">You have %1$s GOLD in your bank</string>

    <!-- Strings related to TranseferActivity -->
    <string name="transuid">Your uID is %1$s</string>
    <string name="trans">You have transferred %1$d coins to your friend</string>
    <string name="nav_transfer">Transfer</string>
    <string name="auth">Type your friend\'s uID</string>
    <string name="banked">You have banked this coin</string>

    <!-- Strings related to HomeActivity -->
    <string name="nav_home">Home</string>
    <string name="Steps">You stepped %1$s steps</string>
    <string name="log_out">Log Out</string>
    <string name="level">You are playing %1$s mode</string>
    <string name="calories">You have burnt %1$d calories</string>
    <string name="easy">EASY</string>
    <string name="med">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="welcome">This is Coinz and you are playing in %1$s mode</string>
    <!-- Strings related to HomeActivity (not used yet) -->
    <string name="spare">Number of spare coins received today: %1$d</string>
    <string name="colorD">DOLR colour is GREEN</string>
    <string name="colorS">SHIL colour is BLUE</string>
    <string name="colorP">PENY colour is RED</string>
    <string name="colorQ">QUID colour is YELLOW</string>
    <string name="rateQ">1 QUID is %1$d GOLD</string>
    <string name="rateD">1 DOLR is %1$d GOLD</string>
    <string name="rateP">1 PENY is %1$d GOLD</string>
    <string name="rateS">1 SHIL is %1$d GOLD</string>
    <string name="wallet">You have %1$d coins in your wallet</string>
    <string name="collectedCoins">You have collected %1$d coins</string>
    <string name="banktrans">You have transferred %1$d coins to your bank</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>















































    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">This is Coinz!</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
