<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinLay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <!-- This is item holders for the recycler view in WalletActivity-->


    <android.support.v7.widget.CardView
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:text="@string/action_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textViewCurr"
                android:text="@string/action_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/textViewGold"
                android:text="@string/action_settings"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/buttonBank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/nav_bank"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>
            <Button
                android:id="@+id/buttonTrans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/nav_transfer"
                android:textColor="@color/colorPrimaryDark"
                android:theme="@style/ThemeOverlay.MyDarkButton"/>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>